--- a/index.html
+++ b/index.html
@@ -1,79 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer sitio web</title>
-    <link rel="stylesheet" href="styles.css"
+    <title>laboratorio 3 - fundamento de programacion,HTML y GIT</title>
+    <link rel="stylesheet" href="stylyles.css"
 </head>
 <body>
- Titulo principal</1>
-<h2>sudtitulo de la pagina</h2>
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque perferendis, molestias impedit libero quam tenetur
-     eum voluptatum odit quis repudiandae delectus reprehenderit, officia asperiores praesentium. Vitae explicabo quo vel cum.
+    <h1>Mi hoja de vida</h1>
+    <h2>Mis Datos Personales</h2>
+    </tr><p>Nombre: Albeiro Junior</p>
+    <p>Apellidos: Galvis Uriana</p>
+    <p>Profeccion: estudiantre</p>
+    <h2>Acerca de mi</h2>
+    <p>Hola mi nombre es albeiro soy de maicao la guajira tengo 23 años actualmente soy estudiante
+         de la univercidad de la guajira voy para el segundo semestre en gestion de redes informatica y en mis tiempo libre
+         me gusta escuchar musica , me gusta el anime el futbol y los videosjuegos, me apaciona la programacion
+       <p>
+</figure>
+     <img src="laboratorio3.jpg" alt="imagen desarrollador frontend">
+</figure>
+<ul>Mis redes sociales</ul>
 
-</p>
-   <p>
-    <img src="laboratorio5.jpg" alt="error al cargar la imagen">
-      
-</p>
-<ul>
-    <li>elemento</li>
-    <li>elemento</li>
-    <li>elemento</li>
-    <li>elemento</li>
-    <li>elemento</li>
+<li><a href="https://www.facebook.com/share/15g7gMtzfD/?mibextid=LQQJ4d">facebook</a></li>
+<li><a href="https://www.instagram.com/junior_.2108?igsh=ZnIwcGdsdTJzcmhx&utm_source=qr">instagram</a></li>
+<ul>Mis pasa tiempos</ul>
+    <li>videojuegos</li>
+    <li>futbol</li>
+    <li>viajar</li>
 </ul>
-
+<ol>Mis actividades pendientes</ol>
+   <li>terminar mi tecnico de la univercidad</li>
+    <li>subir contenido a mi instagram</li>
+    <li>prepararme para ser un programador</li>
 <ol>
-    <li>elemento</li>
-    <li>elemento</li>
-    <li>elemento</li>
-    <li>elemento</li>
-    <li>elemento</li>
-</ol>
-
-<h3> tabla bien estructurada</h3>
 <table>
-    <head>
+    <thead>
         <tr>
-            <th>horario</th>
-            <th>horario</th>
-            <th>horario</th>
-            <th>horario</th>
+            <th>familiares</th>
+            <th>parentesco</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>horario</td>
-            <td>horario</td>
-            <td>horario</td>
-            <td>horario</td>
+            <td>padre</td>
+            <td>albeiro gslvis</td>
         </tr>
         <tr>
-            <td>horario</td>
-            <td>horario</td>
-            <td>horario</td>
-            <td>horario</td>
-        </tr>
-    </head>
-</table>
-
-    <h4>formulario de contacto</h4>
-    <form id="contacForm">
-        <label for="name">Nombre</label><br>
-        <input type="text" id="name" name="name" placeholder="escriba el nombre" required><br><br>
-
-        <label for="reason">motivo de contacto</label><br><br>
-        <textarea name="reason" id="reason" rows="4" placeholder="escriba su motivo" requred></textarea>
-
-        <label for="email">Email</label><br><br>
-        <input type="email" id="email" name="email" placeholder="escriba su correo" required><br><br>
-
-        <button type="submit">ENVIAR</button>
-
-        </form>
-<script src="styles.css"</script>
-
-    
+            <td>madre</td>
+            <td>mercedes mengual</td>
+         </tr>
+     </tbody>
+  </table>
+</body>
+</html>
